--- a/src/data/structs/h1/tags/sound.yml
+++ b/src/data/structs/h1/tags/sound.yml
@@ -298,6 +298,13 @@ type_defs:
         type: float
         meta:
           default: 1
+          max: 1
+          min: 0
+        comments:
+          en: >
+            Warning: [Legacy Guerilla][hek/guerilla] allows you to set
+            this value outside its valid range. Avoid crashes by staying in the
+            valid range.
       - name: maximum_bend_per_second
         type: float
       - type: pad
@@ -306,6 +313,14 @@ type_defs:
         type: float
       - name: zero_gain_modifier
         type: float
+        meta:
+          max: 1
+          min: 0
+        comments:
+          en: >
+            Warning: [Legacy Guerilla][hek/guerilla] allows you to set
+            this value outside its valid range. Avoid crashes by staying in the
+            valid range.
       - name: zero_pitch_modifier
         type: float
       - type: pad
@@ -314,6 +329,14 @@ type_defs:
         type: float
       - name: one_gain_modifier
         type: float
+        meta:
+          max: 1
+          min: 0
+        comments:
+          en: >
+            Warning: [Legacy Guerilla][hek/guerilla] allows you to set
+            this value outside its valid range. Avoid crashes by staying in the
+            valid range.
       - name: one_pitch_modifier
         type: float
       - type: pad
