Update Osoyoos image
Also change level creation hub text

--- a/src/content/h1/guides/map-making/level-creation/page.yml
+++ b/src/content/h1/guides/map-making/level-creation/page.yml
@@ -1,9 +1,9 @@
 title:
-  en: H1 level guide
+  en: H1 level creation hub
 keywords:
   en:
     - modeling
     - exporter
 thanks:
   General_101:
-    en: Writing this guide
+    en: Writing this page.
