--- a/src/content/h1/tools/h1a-ek/page.yml
+++ b/src/content/h1/tools/h1a-ek/page.yml
@@ -13,7 +13,7 @@ imgCaption:
 info:
   en: |-
     * Release date: 2021
-    * The tools can be [downloaded through Steam](https://store.steampowered.com/app/fake_steam_appid).
+    * The tools can be [downloaded through Steam](steam://run/1532190).
 related:
   - /h1/tools/hek
 stub: false
