Add a "getting started" section to the h1a-ek page.

--- a/src/content/h1/tools/h1a-ek/page.yml
+++ b/src/content/h1/tools/h1a-ek/page.yml
@@ -12,7 +12,7 @@ imgCaption:
     [Sapien][h1a-sapien], [Guerilla][h1a-guerilla], and [Tool][h1a-tool] have returned!
 info:
   en: |-
-    * Release date: 2021
+    * Release date: June 2021
     * The tools can be [downloaded through Steam](steam://run/1532190).
 related:
   - /h1/tools/hek
