--- a/src/content/h1/tools/h1a-ek/page.yml
+++ b/src/content/h1/tools/h1a-ek/page.yml
@@ -13,7 +13,9 @@ imgCaption:
 info:
   en: |-
     * Release date: June 2021
-    * The tools can be [downloaded through Steam](steam://run/1532190).
+    * [Download/run with Steam](steam://run/1532190)
+    * [Steam release post](https://store.steampowered.com/news/app/976730/view/3007823106801144958)
+    * [Steam community discussions](https://steamcommunity.com/app/976730/discussions/3/)
 related:
   - /h1/tools/hek
 stub: false
