Emphasize that people need to extract h1a-ek's data.zip

--- a/src/content/h1/tools/h1a-ek/page.yml
+++ b/src/content/h1/tools/h1a-ek/page.yml
@@ -19,5 +19,6 @@ info:
     * [Steam community discussions](https://steamcommunity.com/app/976730/discussions/3/)
 related:
   - /h1/tools/hek
+  - /h1/guides/intro-to-h1-modding
 stub: false
 toolName: H1A-EK
