Reword JMS page and add tool verbs

--- a/src/content/h1/source-data/jms/page.yml
+++ b/src/content/h1/source-data/jms/page.yml
@@ -2,3 +2,6 @@ title:
   en: JMS
 stub: true
 workflowName: jms
+img: rigged-cyborg.jpg
+imgCaption:
+  en: JMS files contain model geometry, material assignments, and skeleton data.
