--- a/src/content/h1/tools/opensauce/page.yml
+++ b/src/content/h1/tools/opensauce/page.yml
@@ -3,7 +3,7 @@ title:
 info:
   en: >
     *
-    [Source](https://bitbucket.org/KornnerStudios/opensauce-release/src/default/)
+    [Source](https://github.com/yumiris/OpenSauce/wiki)
 
     * [Download](https://haloce3.com/downloads/applications/open-sauce-4-0/)
 stub: true
