--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "homepage": "https://c20.reclaimers.net",
   "dependencies": {
     "express": "^4.17.1",
-    "ffmpeg": "^0.0.4",
     "htm": "^3.0.4",
+    "htmlparser2": "^6.1.0",
     "minisearch": "^2.3.1",
     "serve-static": "^1.14.1"
   },
