--- a/src/content/h1/tags/shader/shader_transparent_chicago_extended/page.yml
+++ b/src/content/h1/tags/shader/shader_transparent_chicago_extended/page.yml
@@ -1,5 +1,8 @@
 title:
   en: shader_transparent_chicago_extended
+img: cortana.jpg
+imgCaption:
+  en: Cortana is an example of a model using this shader type.
 tagName: shader_transparent_chicago_extended
 thanks:
   Jakey:
