--- a/src/data/structs/h1/tags/shader_transparent_generic.yml
+++ b/src/data/structs/h1/tags/shader_transparent_generic.yml
@@ -304,7 +304,7 @@ type_defs:
       tag_id: sotr
       pre_compile: true
     comments:
-      en: A transparent shader type supported on classic Xbox only.
+      en: A transparent shader type supported by H1X and H1A only.
     assert_size: 108
     fields:
       - name: numeric_counter_limit
