Add a page for h2codez.
Includes a copy of the changelog from the github repo

--- a/src/data/workflows/workflows.yml
+++ b/src/data/workflows/workflows.yml
@@ -535,6 +535,11 @@ workflowItems:
   H2V-Sapien:
     inherit: H2V-EK
     page: h2sapien
+  H2Codez:
+    page: H2Codez
+    authors:
+      - Himanshu-01
+      - num0005
   H2C-EK:
     page: h2c-ek
     authors:
@@ -566,7 +571,7 @@ workflowItems:
     inherit: h2_tags
     page: h2/tags/scenario_structure_bsp
     
-# H2
+# H3
   H3EK:
     page: h3ek
     authors:
