Make sure the H2 info copied for H3 is still accurate.

--- a/src/content/h3/tools/h3-ek/h3-guerilla/page.yml
+++ b/src/content/h3/tools/h3-ek/h3-guerilla/page.yml
@@ -1,6 +1,6 @@
 title:
   en: H3 Guerilla
-img: h2c-guerilla.jpg
+img: h3-guerilla.jpg
 imgCaption:
   en: >-
     A screenshot of Guerilla
@@ -8,4 +8,4 @@ stub: true
 keywords:
   en:
     - tag-editor
-toolName: H2C-Guerilla
+toolName: H3-Guerilla
