--- a/src/data/workflows/workflows.yml
+++ b/src/data/workflows/workflows.yml
@@ -573,12 +573,23 @@ workflowItems:
     
 # H3
   H3EK:
-    page: h3ek
+    page: h3-ek
     authors:
       - 343 Industries
       - Bungie
       - Saber Interactive
-
+  H3-Tool:
+    inherit: H3EK
+    page: h3-tool
+  H3-Guerilla:
+    inherit: H3EK
+    page: h3-guerilla
+  H3-Sapien:
+    inherit: H3EK
+    page: h3-sapien
+  H3-Standalone:
+    inherit: H3EK
+    page: h3-standalone
 
 # These are groups of tools which perform similar functions. When an item
 # opts in to workflows, these may appear in the metabox to show similar or
