--- a/src/content/h3/tools/h3-ek/h3-standalone-build/page.yml
+++ b/src/content/h3/tools/h3-ek/h3-standalone-build/page.yml
@@ -5,7 +5,7 @@ keywords:
     - test
     - cache
     - h3
-toolName: H2C-Standalone
+toolName: H3-Standalone
 img: halo_3_tag_test.jpg
 imgCaption:
-  en: Using some debug_object commands
+  en: Watching a cutscene in tag test.
