Add links between h2v and h2c tools.

--- a/src/content/h2/tools/h2a-ek/h2c-sapien/page.yml
+++ b/src/content/h2/tools/h2a-ek/h2c-sapien/page.yml
@@ -1,5 +1,5 @@
 title:
-  en: H2C-Sapien
+  en: H2C Sapien
 img: h2c-sapien.jpg
 imgCaption:
   en: Sapien being used to place scenery in `coagulation.scenario`
