--- a/src/content/h1/tools/hek/tool/page.yml
+++ b/src/content/h1/tools/hek/tool/page.yml
@@ -1,5 +1,5 @@
 title:
-  en: Tool (Gearbox)
+  en: H1CE Tool (2004)
 img: tool.jpg
 imgCaption:
   en: '`tool structure` being used to compile a JMS'
