--- a/src/content/h2/tools/h2-ek/h2-guerilla/page.yml
+++ b/src/content/h2/tools/h2-ek/h2-guerilla/page.yml
@@ -1,6 +1,6 @@
 title:
-  en: H2C Guerilla
-img: h2c-guerilla.jpg
+  en: H2 Guerilla (2021)
+img: h2-guerilla.jpg
 imgCaption:
   en: >-
     A screenshot of Guerilla
@@ -8,4 +8,4 @@ stub: true
 keywords:
   en:
     - tag-editor
-toolName: H2C-Guerilla
+toolName: H2-Guerilla
