--- a/src/content/h2/tools/h2v-ek/h2v-tool/page.yml
+++ b/src/content/h2/tools/h2v-ek/h2v-tool/page.yml
@@ -1,8 +1,8 @@
 title:
-  en: H2Tool
+  en: H2V Tool (2007)
 img: h2tool.jpg
 imgCaption:
-  en: 'Using H2Tool in CMD to view the command list'
+  en: 'Using H2V Tool in CMD to view the command list'
 stub: true
 keywords:
   en:
