--- a/src/content/h3/tools/h3-ek/page.yml
+++ b/src/content/h3/tools/h3-ek/page.yml
@@ -1,12 +1,11 @@
 title:
-  en: Halo 3 Editing Kit (H3EK)
+  en: Halo 3 Editing Kit
 img: h3ek.jpg
 imgCaption:
   en: >-
-    caption goes here todo(numoo5)
+    Sapien, Tool, and Guerilla are still the main programs used for modding Halo 3.
 info:
   en: >
     * Release date: 2021
-
 stub: true
-toolName: H3EK
+toolName: H3-EK
