--- a/src/content/h2/tools/h2-ek/h2-sapien/page.yml
+++ b/src/content/h2/tools/h2-ek/h2-sapien/page.yml
@@ -1,10 +1,10 @@
 title:
-  en: H2C Sapien
-img: h2c-sapien.jpg
+  en: H2 Sapien (2021)
+img: h2-sapien.jpg
 imgCaption:
   en: Sapien being used to place scenery in `coagulation.scenario`
 stub: true
 keywords:
   en:
     - scenario
-toolName: H2C-Sapien
+toolName: H2-Sapien
