--- a/src/content/h2/tools/h2v-ek/h2v-guerilla/page.yml
+++ b/src/content/h2/tools/h2v-ek/h2v-guerilla/page.yml
@@ -1,9 +1,9 @@
 title:
-  en: H2Guerilla
+  en: H2V Guerilla (2007)
 img: level_h2guerilla_01_large.jpg
 imgCaption:
   en: >-
-    A screenshot of H2Guerilla
+    A screenshot of H2V Guerilla
 stub: true
 keywords:
   en:
