--- a/src/content/h2/tools/h2v-ek/h2v-sapien/page.yml
+++ b/src/content/h2/tools/h2v-ek/h2v-sapien/page.yml
@@ -1,8 +1,8 @@
 title:
-  en: H2Sapien
+  en: H2V Sapien (2007)
 img: netgame_equipment_04_large.jpg
 imgCaption:
-  en: H2Sapien being used to place item spawns in `example.scenario`
+  en: H2V Sapien being used to place item spawns in `example.scenario`
 stub: true
 keywords:
   en:
