--- a/src/content/general/tools/reclaimer/page.yml
+++ b/src/content/general/tools/reclaimer/page.yml
@@ -1,15 +1,13 @@
 title:
-  en: Reclaimer
+  en: Reclaimer (data viewer/extractor)
 toolName: Reclaimer
-alerts:
-  - md:
-      en: >
-        Some basic [command-line][] and Python knowledge is required to use Reclaimer.
-        Get started learning Python [here](https://www.python.org/about/gettingstarted/).
-info:
-  en: |
-    * [GitHub](https://github.com/Sigmmma/reclaimer)
-    * [pypi.org](https://pypi.org/project/reclaimer/)
-keywords:
-  en:
-    - mozzarilla
+stub: true
+img: reclaimer.jpg
+imgCaption:
+  en: Reclaimer being used to view a Halo 3 [render_model][h3/tags/render_model] tag.
+info: >-
+  * [GitHub repo](https://github.com/Gravemind2401/Reclaimer)
+  * [Releases](https://github.com/Gravemind2401/Reclaimer/releases)
+  * [Wiki](https://github.com/Gravemind2401/Reclaimer/wiki)
+related:
+  - /general/tools/assembly
