Add space h1/h2/h3 hint in page title

--- a/src/content/h2/tags/scenario_structure_bsp/page.yml
+++ b/src/content/h2/tags/scenario_structure_bsp/page.yml
@@ -1,7 +1,8 @@
 title:
-  en: scenario_structure_bsp (h2)
+  en: scenario_structure_bsp
 stub: true
+workflowName: h2/scenario_structure_bsp
 keywords:
   en:
     - string
-workflowName: h2/scenario_structure_bsp
+    - bsp
