--- a/src/content/h2/tools/h2-ek/page.yml
+++ b/src/content/h2/tools/h2-ek/page.yml
@@ -1,10 +1,13 @@
 title:
   en: Halo 2 Editing Kit (2021)
 img: h2-ek.jpg
+toolName: H2-EK
 imgCaption:
   en: >-
     [H2-Sapien][], [H2-Guerilla][], and [H2-Tool][] running like a champ
 info:
   en: >
     * Release date: 2021
-stub: true
+keywords:
+  en:
+    - h2ek
