Explicitly state game version for all h1 tag page.yaml

--- a/src/content/h1/tags/antenna/page.yml
+++ b/src/content/h1/tags/antenna/page.yml
@@ -4,4 +4,4 @@ img: antenna.jpg
 imgCaption:
   en: These antennas on the scorpion tank are described by antenna tags.
 stub: true
-tagName: antenna
+tagName: h1/antenna
