--- a/src/content/h1/tags/contrail/page.yml
+++ b/src/content/h1/tags/contrail/page.yml
@@ -4,7 +4,7 @@ img: contrail.jpg
 imgCaption:
   en: Sentinel beams and assault rifle tracers are examples of contrails
 stub: true
-tagName: contrail
+tagName: h1/contrail
 thanks:
   gbMichelle:
     en: Limits
