--- a/src/content/h1/tags/decal/page.yml
+++ b/src/content/h1/tags/decal/page.yml
@@ -3,4 +3,4 @@ title:
 img: decals.jpg
 imgCaption:
   en: 'Painted signs, bullet holes, and blood splats are all decal instances.'
-tagName: decal
+tagName: h1/decal
