--- a/src/content/h1/tags/gbxmodel/page.yml
+++ b/src/content/h1/tags/gbxmodel/page.yml
@@ -8,7 +8,7 @@ imgCaption:
 keywords:
   en:
     - model
-tagName: gbxmodel
+tagName: h1/gbxmodel
 thanks:
   Fubih:
     en: Regions render order tip
