--- a/src/content/h1/tags/glow/page.yml
+++ b/src/content/h1/tags/glow/page.yml
@@ -4,4 +4,4 @@ img: glow.jpg
 imgCaption:
   en: The gold Elite's energy sword is the only use of glow tags in Halo 1.
 stub: true
-tagName: glow
+tagName: h1/glow
