--- a/src/content/h1/tags/hud_message_text/page.yml
+++ b/src/content/h1/tags/hud_message_text/page.yml
@@ -1,7 +1,7 @@
 title:
   en: hud_message_text
 stub: true
-tagName: hud_message_text
+tagName: h1/hud_message_text
 img: hmt.jpg
 imgCaption:
   en: Level objectives are one use of this tag.
