--- a/src/content/h1/tags/object/device/device_control/page.yml
+++ b/src/content/h1/tags/object/device/device_control/page.yml
@@ -1,7 +1,7 @@
 title:
   en: device_control
   es: device_control
-tagName: device_control
+tagName: h1/device_control
 stub: true
 keywords:
   en:
