--- a/src/content/h1/tags/object/scenery/page.yml
+++ b/src/content/h1/tags/object/scenery/page.yml
@@ -5,4 +5,4 @@ imgCaption:
   en: >-
     Trees, boulders, landing beacons, and covenant crates are all instances of
     scenery
-tagName: scenery
+tagName: h1/scenery
