--- a/src/content/h1/tags/point_physics/page.yml
+++ b/src/content/h1/tags/point_physics/page.yml
@@ -1,7 +1,7 @@
 title:
   en: point_physics
 stub: true
-tagName: point_physics
+tagName: h1/point_physics
 img: pphy.jpg
 imgCaption:
   en: Point physics usages shown as red and green markers within a [flag][] and [particles][particle].
