--- a/src/content/h1/tags/scenario/page.yml
+++ b/src/content/h1/tags/scenario/page.yml
@@ -6,7 +6,7 @@ imgCaption:
     The scenario contains information needed to make a map playable, including
     the placement of objects, spawn points, and AI encounters.
 stub: true
-tagName: scenario
+tagName: h1/scenario
 thanks:
   Masterz1337:
     en: Encounters vs bipeds
