--- a/src/content/h1/tags/shader/shader_environment/page.yml
+++ b/src/content/h1/tags/shader/shader_environment/page.yml
@@ -4,4 +4,4 @@ img: bloodgulch.jpg
 imgCaption:
   en: A shader_environment can be used to blend between two detail maps.
 stub: true
-tagName: shader_environment
+tagName: h1/shader_environment
