--- a/src/content/h1/tags/bitmap/page.yml
+++ b/src/content/h1/tags/bitmap/page.yml
@@ -3,7 +3,7 @@ title:
 img: bitmap_example.jpg
 imgCaption:
   en: 'A typical level texture bitmap, used for environment shaders'
-tagName: bitmap
+tagName: h1/bitmap
 thanks:
   gbMichelle:
     en: 'Information on formats, bitmap types, usage, compilation, and errors'
