--- a/src/content/h1/tags/damage_effect/page.yml
+++ b/src/content/h1/tags/damage_effect/page.yml
@@ -3,7 +3,7 @@ title:
 img: explosion.jpg
 imgCaption:
   en: 'The grenade detonation [effect][] includes a damage_effect.'
-tagName: damage_effect
+tagName: h1/damage_effect
 thanks:
   Mortis:
     en: Explaining headshot damage and bleedthrough
