--- a/src/content/h1/tags/light/page.yml
+++ b/src/content/h1/tags/light/page.yml
@@ -6,4 +6,4 @@ imgCaption:
     Lights attached to [objects][object] can illuminate their surroundings with
     dynamic or static lighting.
 stub: true
-tagName: light
+tagName: h1/light
