--- a/src/content/h1/tags/light_volume/page.yml
+++ b/src/content/h1/tags/light_volume/page.yml
@@ -4,4 +4,4 @@ img: light-vol.jpg
 imgCaption:
   en: A plasma rifle bolt with contrail removed for clarity.
 stub: true
-tagName: light_volume
+tagName: h1/light_volume
