--- a/src/content/h1/tags/material_effects/page.yml
+++ b/src/content/h1/tags/material_effects/page.yml
@@ -4,7 +4,7 @@ img: mtleffect.jpg
 imgCaption:
   en: Tread marks and slip particles are caused by material effects.
 stub: true
-tagName: material_effects
+tagName: h1/material_effects
 thanks:
   Masterz1337:
     en: Explaining why to use the sound field
