--- a/src/content/h1/tags/model/page.yml
+++ b/src/content/h1/tags/model/page.yml
@@ -4,7 +4,7 @@ stub: true
 keywords:
   en:
     - gbxmodel
-tagName: model
+tagName: h1/model
 thanks:
   Kavawuvi:
     en: Differences from gbxmodel
