--- a/src/content/h1/tags/object/projectile/page.yml
+++ b/src/content/h1/tags/object/projectile/page.yml
@@ -6,7 +6,7 @@ imgCaption:
     Projectiles can be given a render model and a variety of effects and
     attachments, like [contrails][contrail] and [lights][light].
 stub: true
-tagName: projectile
+tagName: h1/projectile
 thanks:
   gbMichelle:
     en: Movement
