--- a/src/content/h1/tags/object/unit/biped/page.yml
+++ b/src/content/h1/tags/object/unit/biped/page.yml
@@ -4,4 +4,4 @@ img: bipeds.jpg
 imgCaption:
   en: Some bipeds scripted to run along a path during c10's intro
 stub: true
-tagName: biped
+tagName: h1/biped
