--- a/src/content/h1/tags/particle_system/page.yml
+++ b/src/content/h1/tags/particle_system/page.yml
@@ -6,4 +6,4 @@ imgCaption:
     The flamethrower's fire begins bright and orange, and evolves to a smokey
     brown
 stub: true
-tagName: particle_system
+tagName: h1/particle_system
