--- a/src/content/h1/tags/ui_widget_definition/page.yml
+++ b/src/content/h1/tags/ui_widget_definition/page.yml
@@ -1,7 +1,7 @@
 title:
   en: ui_widget_definition
 stub: true
-tagName: ui_widget_definition
+tagName: h1/ui_widget_definition
 thanks:
   Jakey:
     en: Bounds scaling workaround
