Add related links between generations of EK's and tools.

--- a/src/content/h2/tools/h2-ek/page.yml
+++ b/src/content/h2/tools/h2-ek/page.yml
@@ -8,6 +8,10 @@ imgCaption:
 info:
   en: >
     * Release date: 2021
+related:
+  - /h1/tools/h1a-ek
+  - /h2/tools/h2v-ek
+  - /h3/tools/h3-ek
 keywords:
   en:
     - h2ek
