--- a/src/content/h2/tools/h2-ek/h2-sapien/page.yml
+++ b/src/content/h2/tools/h2-ek/h2-sapien/page.yml
@@ -4,6 +4,10 @@ img: h2-sapien.jpg
 imgCaption:
   en: Sapien being used to place scenery in `coagulation.scenario`
 stub: true
+related:
+  - /h1/tools/h1a-ek/h1a-sapien
+  - /h2/tools/h2v-ek/h2v-sapien
+  - /h3/tools/h3-ek/h3-sapien
 keywords:
   en:
     - scenario
