--- a/src/content/h2/tools/h2-ek/h2-standalone-build/page.yml
+++ b/src/content/h2/tools/h2-ek/h2-standalone-build/page.yml
@@ -5,6 +5,9 @@ keywords:
     - test
     - cache
     - h2a
+related:
+  - /h1/tools/h1a-ek/h1a-standalone-build
+  - /h3/tools/h3-ek/h3-standalone-build
 toolName: H2-Standalone
 img: halo_2_tag_test.jpg
 imgCaption:
