--- a/src/content/h2/tools/h2-ek/h2-tool/page.yml
+++ b/src/content/h2/tools/h2-ek/h2-tool/page.yml
@@ -4,6 +4,10 @@ img: h2tool.jpg
 imgCaption:
   en: 'Using H2 Tool in CMD to view the command list'
 stub: true
+related:
+  - /h1/tools/h1a-ek/h1a-tool
+  - /h2/tools/h2v-ek/h2v-tool
+  - /h3/tools/h3-ek/h3-tool
 keywords:
   en:
     - lightmap
